k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-springboot-app-service
spec:
  selector:
    app: my-springboot-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
